# libraries-io-scraper

./: .gitignore  README.md  check_conda_dependencies.py  check_node_dependencies.py  dependencies.md  dependency_ratings.md  deps.yml  make_results_table.py  pyproject.toml
docs/: data.md
libraries_io_scraper/: __main__.py  api.py  api_operations.py  check_node_dependencies.py  config.py  dependency_operations.py  main.py  make_results_table.py  models.py  node_dependency_operations.py  wait_timer.py
libraries_io_scraper/app/: app.py  main.py
libraries_io_scraper/dependency_operations/: __init__.py  conda.py  node.py  python.py
libraries_io_scraper/results_table/: make_results_table.py  markdown_table_template.j2
scripts/: check_node_dependencies.py
src/libraries_io_scraper/: __init__.py  __main__.py  api.py  config.py  make_results_table.py  models.py  wait_timer.py
src/libraries_io_scraper/app/: app.py
src/libraries_io_scraper/dependency_operations/: __init__.py  conda.py  node.py  python.py
src/libraries_io_scraper/results_table/: predeveloped_software.j2  tools.j2
tests/: conftest.py
tests/app/: test_app.py
tests/dependency_operations/: test_parse_conda_dependencies.py  test_parse_dependencies_file.py  test_parse_dependency_string.py  test_parse_node_dependencies.py
tests/make_results_table/: test_make_results_table.py
tests/models/: test_Dependency.py
