[tool.poetry]
name = "libraries-io-scraper"
version = "0.1.0"
description = ""
authors = ["Joe Beaver <joseph.beaver@gmail.com>"]
readme = "README.md"
packages = [{ include = "libraries_io_scraper", from = '.' }]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic-settings = "^2.0.2"
loguru = "^0.7.0"
pyyaml = "^6.0.1"
pydantic = "^2.1.1"
jinja2 = "^3.1.2"
click = "^8.1.7"
types-pyyaml = "^6.0.12.12"
types-requests = "^2.31.0.10"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pydantic = "^2.1.1"
ruff = "^0.0.280"
ipython = "^8.14.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
mypy = "^1.6.1"
pdbpp = "^0.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
lioscrape = "libraries_io_scraper.app.app:libioscraper"

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
source = ["libraries_io_scraper"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
