[project]
name = "libraries-io-scraper"
version = "0.1.0"
description = "Simple software attestation made easy."
authors = [{ name = "Joe Beaver", email = "joseph.beaver@gmail.com" }]
dependencies = [
  "requests>=2.31.0",
  "pydantic-settings>=2.2.1",
  "loguru>=0.7.2",
  "pyyaml>=6.0.1",
  "pydantic>=2.7.1",
  "jinja2>=3.1.4",
  "click>=8.1.7",
  "types-pyyaml>=6.0.12.20240311",
  "types-requests>=2.31.0.20240406",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
lios = "libraries_io_scraper.app.app:lios"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pdbpp>=0.10.3",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "python-dotenv>=1.0.1",
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ipython>=8.26.0",
    "badgie>=0.12.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/libraries_io_scraper"]

[tool.ruff]
line-length = 80

[tool.ruff.lint.isort]
lines-after-imports = 2
force-sort-within-sections = true

[tool.pytest.ini_options]
addopts = "--cov"

[tool.coverage.run]
source = ["src/"]

[tool.coverage.report]
exclude_also = ["tests/"]
show_missing = true
